--- a/views/nantian_erp_view.xml
+++ b/views/nantian_erp_view.xml
@@ -187,5 +187,81 @@
                 </form>
             </field>
         </record>
+         <record id="nantian_service_partner_action" model="ir.actions.act_window">
+            <field name="name">服务客户</field>
+            <field name="res_model">res.partner</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+            <field name ="domain">[('category','=','服务客户')]</field>
+        </record>
+        <record id="nantian_service_tree_partner_action" model="ir.actions.act_window.view">
+            <field name="view_mode">tree</field>
+            <field name="view_id" ref="base.view_partner_tree" />
+            <field name="act_window_id" ref="nantian_service_partner_action" />
+        </record>
+        <record id="nantian_service_form_partner_action" model="ir.actions.act_window.view">
+            <field name="view_mode">form</field>
+            <field name="view_id" ref="nantian_service_partner_form" />
+            <field name="act_window_id" ref="nantian_service_partner_action" />
+        </record>
+        <menuitem id="nantian_partner" sequence="10"  name="客户管理" groups="nantian_erp.group_nantian_header,nantian_erp.group_nantian_assistant,nantian_erp.group_nantian_boss,nantian_erp.group_hr_president_assistant"/>
+        <menuitem id="nantian_partner_2" sequence="1"  name="客户" parent="nantian_partner" groups="nantian_erp.group_nantian_header,nantian_erp.group_nantian_assistant,nantian_erp.group_nantian_boss,nantian_erp.group_hr_president_assistant"/>
+        <menuitem id="nantian_service_partner" sequence="1" parent="nantian_partner_2" action="nantian_service_partner_action" name="partner" groups="nantian_erp.group_nantian_header,nantian_erp.group_nantian_assistant,nantian_erp.group_nantian_boss,nantian_erp.group_hr_president_assistant"/>
+
+        <record model="ir.ui.view" id="nantian_service_form_view">
+            <field name="name">nantian_service_form</field>
+            <field name="model">nantian_erp.service</field>
+            <field name="arch" type="xml">
+                <form string="collection">
+                <sheet>
+                    <group>
+                        <group>
+                            <field name="type" string="业务类型"/>
+                            <field name="partner_id" string="客户"/>
+
+                        </group>
+                        <group>
+                             <field name="user_id" string="业务负责人"/>
+                            <field name="sale_user_id" string="销售负责人"/>
+                        </group>
+                    </group>
+                </sheet>
+                </form>
+            </field>
+        </record>
+        <record model="ir.ui.view" id="nantian_service_tree_view">
+            <field name="name">nantian_service tree</field>
+            <field name="model">nantian_erp.service</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="type" string="业务类型"/>
+                    <field name="partner_id" string="客户"/>
+                     <field name="user_id" string="业务负责人"/>
+                    <field name="sale_user_id" string="销售负责人"/>
+                </tree>
+            </field>
+        </record>
+        <record id="contract_collection_filter_view" model="ir.ui.view">
+            <field name="name">nantian_service filter</field>
+            <field name="model">nantian_erp.service</field>
+            <field name="arch" type="xml">
+                <search string="Search">
+                    <field name="type" string="业务类型"/>
+                    <field name="partner_id" string="客户"/>
+                     <field name="user_id" string="业务负责人"/>
+                    <field name="sale_user_id" string="销售负责人"/>
+                </search>
+            </field>
+        </record>
+
+        <record id="nantian_erp_service_action" model="ir.actions.act_window">
+            <field name="name">业务类型</field>
+            <field name="res_model">nantian_erp.service</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
+        <menuitem id="nantian_service_type" sequence="1" parent="nantian_partner_2" action="nantian_erp_service_action" name="业务类型" groups="nantian_erp.group_nantian_header,nantian_erp.group_nantian_assistant,nantian_erp.group_nantian_boss,nantian_erp.group_hr_president_assistant"/>
+
     </data>
 </openerp>
