--- a/views/nantian_erp_work_team_view.xml
+++ b/views/nantian_erp_work_team_view.xml
@@ -50,6 +50,29 @@
                                 </kanban>
                             </field>
                         </page>
+                        <page string="合同" name="contract">
+                            <field colspan="2" name="contract_ids" widget="many2many_kanban"  context="{'default_groups_ref': ['base.group_user', 'base.group_partner_manager','nantian_erp.group_work_team_user']}">
+                                <kanban quick_create="false" create="true" delete="true">
+                                    <field name="name"/>
+                                    <templates>
+                                        <t t-name="kanban-box">
+                                            <div style="position: relative">
+                                                <a t-if="! read_only_mode" type="delete" style="position: absolute; right: 0; padding: 1px; diplay: inline-block">X</a>
+                                                <div class="oe_module_vignette">
+                                                    <a type="open"><img t-att-src="kanban_image('nantian_erp.contract', 'image_small', record.id.value)" class="oe_avatar oe_kanban_avatar_smallbox"/></a>
+                                                    <div class="oe_module_desc">
+                                                        <field name="name"/>
+                                                        <!--<field name="contract_num"/>-->
+                                                        <field name="customer_id"/>
+                                                        <field name="header_id"/>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </t>
+                                    </templates>
+                                </kanban>
+                            </field>
+                        </page>
                     </notebook>
                 </sheet>
                 <!--<div class="oe_chatter">-->
@@ -116,6 +139,29 @@
                                                     <a type="open"><img t-att-src="kanban_image('hr.employee', 'image_small', record.id.value)" class="oe_avatar oe_kanban_avatar_smallbox"/></a>
                                                     <div class="oe_module_desc">
                                                         <field name="name"/>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </t>
+                                    </templates>
+                                </kanban>
+                            </field>
+                        </page>
+                        <page string="合同" name="contract">
+                            <field colspan="2" name="contract_ids" widget="many2many_kanban"  context="{'default_groups_ref': ['base.group_user', 'base.group_partner_manager','nantian_erp.group_work_team_user']}">
+                                <kanban quick_create="false" create="true" delete="true">
+                                    <field name="name"/>
+                                    <templates>
+                                        <t t-name="kanban-box">
+                                            <div style="position: relative">
+                                                <a t-if="! read_only_mode" type="delete" style="position: absolute; right: 0; padding: 1px; diplay: inline-block">X</a>
+                                                <div class="oe_module_vignette">
+                                                    <a type="open"><img t-att-src="kanban_image('nantian_erp.contract', 'image_small', record.id.value)" class="oe_avatar oe_kanban_avatar_smallbox"/></a>
+                                                    <div class="oe_module_desc">
+                                                        <field name="name"/>
+                                                        <!--<field name="contract_num"/>-->
+                                                        <field name="customer_id"/>
+                                                        <field name="header_id"/>
                                                     </div>
                                                 </div>
                                             </div>
